--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <p class="verde">🎁la tua intraprendenza e la voglia di fare cose nuove, la capacità di eccellere in tutte le cose che fai 🎁</p>
     <p class="verde">🎁ma soprattutto il buon cuore che ti porti sempre dietro 🎁</p>
     <p class="verde">🎅Solo ora realizzo che tutto il tempo che mi hai dedicato fin da piccolo🎅</p>
-    <p class="verde">🎅e tutti i libri che vanamente mi hai consigliato di leggere lo hai fatto affinchè io potessi capire chi sono e chi voglio essere veramente🎅</p>
-    <p class="verde">🎅e ti assicuro che è anche grazie a te se oggi so rispondere meglio che mai a queste domande e ciò non ha prezzo🎅</p>
+    <p class="verde">🎅tutti i libri che vanamente mi hai consigliato di leggere, erano necessari affinchè io potessi capire chi sono e chi voglio essere veramente🎅</p>
+    <p class="verde">🎅e ti assicuro che è anche grazie a te se oggi sono in grado di rispondere meglio che mai a queste domande e ciò non ha prezzo🎅</p>
     <p class="verde">non posso che non dirti</p>
     <p class="marrone">grazie</p>
     <p class="marrone">grazie</p>
